<resources>
    <string name="app_name">Luciq Sample</string>
    <string name="hello_world">Hello Luciq awesome user! \n The purpose of this application is to show you the different options for customizing the SDK and how easy it is to integrate it to your existing app</string>
    <string name="settings_description">So you want to customize some stuff? While we have default messages for everything that cover 15 languages, we suggest you customize some of these messages to have a more personalized experience for your users! You can also require emails and comments with feedback reports. Everything in here is up to you</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Luciq Settings</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_us">About us</string>
    <string name="get_social">Get social</string>
    <string name="share">Share</string>
    <string name="share_to_friends">Share with friends</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="opengl">Open GL</string>
    <string name="tabs">Tabs</string>
    <string name="action_show_luciq">Show Luciq</string>
    <string name="action_start_new_conversation">Start new conversation</string>
    <string name="action_show_conversation_list">Show conversation list</string>
    <string name="action_show_new_messages_count">Show new messages count</string>
    <string name="action_primary_color">Choose primary color</string>
    <string name="action_show_live_onboarding_message">Show live onboarding message</string>
    <string name="action_show_beta_onboarding_message">Show beta onboarding message</string>
    <string name="action_do_network_request">Do network request</string>
    <string name="action_send_handled_exception">Send handled exception</string>
    <string name="action_crash_the_app">Crash the app!</string>
    <string name="action_show_nps_survey">Show NPS Survey</string>
    <string name="action_show_multiple_question_survey">Show multiple question survey</string>
    <string name="action_show_feature_requests">Show feature requests</string>
    <string name="action_show_settings">Settings</string>
    <string name="action_show_invocation_events">Show Invocation Events</string>
    <string name="action_change_theme">Change theme</string>
    <string name="action_change_primary_color">Set primary color</string>
    <string name="bug_reporting">Bug reporting</string>
    <string name="crash_reporting">Crash reporting</string>
    <string name="send_bug">Report a Bug</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="ask_question">Ask a Question</string>
    <string name="email_hint">Enter your email</string>
    <string name="set_email">Set your Email</string>
    <string name="extended_bug_report">Set extended bug report state</string>
    <string-array name="extended_bug_report_options">
        <item>Enabled and required</item>
        <item>Enabled and optional</item>
        <item>Disabled</item>
    </string-array>
    <string name="bug_reporting_state">Bug reporting</string>
    <string name="bug_reporting_attachments_state_text">Set attachments state</string>
    <string-array name="bug_reporting_attachments_options">
        <item>All enabled</item>
        <item>Initial screenshot only</item>
        <item>Extra screenshots only</item>
        <item>From gallery only</item>
        <item>Screen recording only</item>
    </string-array>
    <string name="crash_reporting_state">Crash reporting</string>
    <string name="anr_text">ANR</string>
    <string name="ndk_text">NDK</string>
    <string name="report_nonfatal">Report Non-fatal</string>
    <string name="exception_name_edit_text">Set exception name</string>
    <string name="finger_print_edit_text">Set finger print</string>

</resources>
