<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Switch
            android:id="@+id/bug_reporting_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bug_reporting_state"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:checked="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:trackTint="@color/blue_light"
            android:thumbTint="@color/blue_light"/>
        <ai.example.luciq.ui.views.RoundedButton
            android:id="@+id/send_a_bug_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSendBugClicked"
            android:padding="10dp"
            android:text="@string/send_bug"
            android:layout_marginBottom="10dp"/>
        <ai.example.luciq.ui.views.RoundedButton
            android:id="@+id/send_feedback_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSendFeedbackClicked"
            android:padding="10dp"
            android:text="@string/send_feedback"
            android:layout_marginBottom="10dp"/>
        <ai.example.luciq.ui.views.RoundedButton
            android:id="@+id/ask_a_question_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAskQuestionClicked"
            android:padding="10dp"
            android:text="@string/ask_question"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/set_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textAllCaps="false"/>
        <ai.example.luciq.ui.views.RoundedButton
            android:id="@+id/set_email_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="onSetEmailClicked"
            android:padding="10dp"
            android:text="@string/set_email"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/extended_bug_report_state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/extended_bug_report"/>
        <Spinner
        android:id= "@+id/extended_bug_report_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:entries="@array/extended_bug_report_options"/>
        <TextView
            android:id="@+id/bug_reporting_attachments_state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/bug_reporting_attachments_state_text"/>
        <Spinner
            android:id= "@+id/bug_reporting_attachments_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:entries="@array/bug_reporting_attachments_options"/>
    </LinearLayout>

</LinearLayout>