<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar" />

    <ai.example.luciq.ui.activities.RoundedButton
        android:id="@+id/action_show_invocation_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onShowInvocationEventsClicked"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/action_show_invocation_events" />

    <ai.example.luciq.ui.activities.RoundedButton
        android:id="@+id/action_change_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onChangeThemeClicked"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/action_change_theme" />

    <ai.example.luciq.ui.activities.RoundedButton
        android:id="@+id/action_change_primary_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onChangePrimaryColorClicked"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/action_change_primary_color" />

</LinearLayout>
